refactor: streamline public condition api